Added swagger docs for all current endpoints, changed some of the validations
